Address Chia-Ping's comments